welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: ')' expected but 'if' found.
    if (biscuit<3) {
    ^